--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,13 @@
   body {
     @apply antialiased;
   }
+
+  .hyphens-auto {
+    hyphens: auto;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+  }
 }
 
 @layer components {
